  * pinger: Get whole url, don't just head, avoids problems on
    the nostromo web server.
  * Recommend libterm-readline-gnu-perl since that makes auto.setup
    behave better.
  * Add auto-blog.setup, which will set up an ikiwiki instance tuned for use
    in blogging.
  * checkcontent: New hook, can be used to implement arbitrary content
    filters, including spam filters.

 -- Joey Hess <joeyh@debian.org>  Tue, 06 Jan 2009 15:02:52 -0500

ikiwiki (3.01) unstable; urgency=low

  * ikiwiki-makerepo: Fix injecting of empty mercurial and bzr repositories.
    Closes: #510518
  * Fix documentation about git hook to use right name. Closes: #510393
  * yesno: Always accept English even when localised.
  * yesno: Also accept 1 and 0 as input.
  * A recent change to gitweb removed support for the form of diffurl 
    that many ikiwiki setups use. Document how to use the new url form.

 -- Joey Hess <joeyh@debian.org>  Mon, 05 Jan 2009 18:53:50 -0500

ikiwiki (3.00) unstable; urgency=low

  * Remove support for GlobLists.
  * Remove support for configuring allowed attachments, locked pages,
    and banned users from the admin preferences page. These can only be
    controlled via the setup file now.
  * ikiwiki-transition moveprefs can be used to move the above
    admin preferences into a setup file.
  * prefix_directives and aggregate_internal are now turned on by default.
  * ikiwiki-transition prefix_directives syntax changed
  * googlecalendar: removed this deprecated plugin. Use htmlscrubber_skip
    instead.
  * embed: This plugin is deprecated, use htmlscrubber_skip instead.
    Closes: ##462970.
  * Version 3.00 of the plugin API.
  * Replace blank OpenID placeholder logo with an unofficial OpenID
    logo developed by Anna Hess. The official logo does not seem destined to
    be free.
  * comments: Add cache avoidance.
  * htmlbalance: Demand-load HTML::TreeBuilder to avoid failing test suite
    if it is not present.