@@ -20,6 +20,8 @@ ikiwiki (3.02) UNRELEASED; urgency=low
     in blogging.
   * checkcontent: New hook, can be used to implement arbitrary content
     filters, including spam filters.
+  * blogspam: New plugin, adding spam filtering for page editing / comment
+    posting using the BlogSpam.net API.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 06 Jan 2009 15:02:52 -0500
 
